samples/_failures_safe/1761529909_85cdb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9582e68.c: In function ‘main’:
./samples/SAFE/__tmp_c9582e68.c:154:17: error: expected expression at end of input
  154 |                 } else if (
      |                 ^
./samples/SAFE/__tmp_c9582e68.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9582e68.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9582e68.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9582e68.c:154:17: error: expected declaration or statement at end of input
